scribble-assertions/src/test/resources/good/extensions/assrtcore/syntax/parsing/AssrtCoreTest03d.scr
module good.extensions.assrtcore.syntax.parsing.AssrtCoreTest03d;


type <java> "java.lang.Integer" from "rt.jar" as int;


//*
global protocol Proto1(role A, role B)
{
	1(x: int) from A to B;  @"!(0 > 1)"  // Testing negation precedence
}
//*/
