scribble-assertions/src/test/resources/bad/extensions/assrtcore/syntax/parsing/AssrtCoreTest03b.scr
module good.extensions.assrtcore.syntax.parsing.AssrtCoreTest03b;


type <java> "java.lang.Integer" from "rt.jar" as int;


//*
global protocol Proto1(role A, role B)
{
	1(x: int) from A to B;  @"!(False || True)"  // Testing negation precedence
}
//*/
